Adjusting schedule code for  keeping previous due
